We now also use a mutex in acpi. Thanks Ingo for the mutex timeout function. This fix some warnings mentioned in #4722.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34563 a95241bf-73f2-0310-859d-f6bbb57e9c96